versions/v0.21/modules/en/pages/overview/certified.adoc
= Certified CAPI Providers
:description: Find certified CAPI providers and their ClusterClass support, including those that can provision managed and unmanaged clusters via topology
:revdate: 2025-07-01
:page-revdate: {revdate}

== What does Certified Providers mean?

Certified Providers are CAPI Providers that are **actively tested** by the Turtles team's CI workflows to validate they work properly with the CAPI extension for Rancher. However, since most CAPI Providers are upstream projects maintained by the Kubernetes open community, **we cannot guarantee** that no issues are introduced as new provider versions are released.

== List of certified providers

[NOTE]
====
This list is constantly evolving to reflect the ongoing development of the project.
====


This is a list of the officially certified CAPI Providers by Turtles. These providers are covered by our test suite and we actively ensure that they work properly with the CAPI extension for Rancher.

|===
| Platform | Code Name | Provider Type | Docs

| *RKE2*
| CAPRKE2
| Bootstrap/Control Plane
| https://rancher.github.io/cluster-api-provider-rke2[CAPRKE2 book]

| *Kubeadm*
| Kubeadm
| Bootstrap/Control Plane
| https://cluster-api.sigs.k8s.io/tasks/bootstrap/kubeadm-bootstrap[CABPK docs]

| *AWS*
| CAPA
| Infrastructure
| https://cluster-api-aws.sigs.k8s.io[CAPA book]

| *Docker**
| CAPD
| Infrastructure
| https://cluster-api.sigs.k8s.io[CAPI book]

| *vSphere*
| CAPV
| Infrastructure
| https://github.com/kubernetes-sigs/cluster-api-provider-vsphere/blob/main/docs/getting_started.md[CAPV docs]

| *Azure*
| CAPZ
| Infrastructure
| https://capz.sigs.k8s.io/[CAPZ book]

| *GCP* (Only GKE managed clusters)
| CAPG
| Infrastructure
| https://cluster-api-gcp.sigs.k8s.io/[CAPG book]

| *Addon Provider Fleet*
| CAAPF
| Addon
| https://rancher.github.io/cluster-api-addon-provider-fleet/[CAAPF book]
|===

*Recommended only for development purposes.

== List of providers in experimental mode

This is a list of providers that are in an advanced state of development and will soon become certified.

|===
| Platform | Code Name | Provider Type | Docs
|===

== ClusterClass Support for Certified Providers

The following is a support matrix for each certified provider and their support of the cluster topology feature:

[tabs]
======
CAPZ::
+
--
- **Full support** of `ClusterClass`: both managed (AKS) and unmanaged (virtual machines) clusters can be provisioned via topology.
--

CAPA::
+
--
- **Supports** `ClusterClass` when provisioning unmanaged (EC2-based) clusters.
- **Does not support** `ClusterClass` when provisioning managed (EKS) clusters: this is a work-in-progress.
--

CAPG::
+
--
- **Supports** `ClusterClass` when provisioning unmanaged (virtual machines) clusters.
- **Does not support** `ClusterClass` when provisioning managed (GKE) clusters: this is a work-in-progress.
--

CAPRKE2::
+
--
- **Full support** of `ClusterClass`.
--

CABPK::
+
--
- **Full support** of `ClusterClass`.
--

CAPV::
+
--
- **Full support** of `ClusterClass`.
--

CAPD::
+
--
- **Full support** of `ClusterClass`.
--
======
